tests/expectations/compiler/records/return_record_instead_of_unit_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected type `()` but type `test_credits` was found.
    --> compiler-test:9:16
     |
   9 |         return test_credits {
     |                ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected type `()` but type `test_credits` was found.
    --> compiler-test:9:16
     |
   9 |         return test_credits {
     |                ^^^^^^^^^^^^
